pairing test.\nUpdated npm scripts

--- a/package.json
+++ b/package.json
@@ -14,8 +14,7 @@
     "build:watch": "lerna run --parallel --stream build:watch",
     "clean": "lerna clean",
     "start": "lerna run --scope wallet-desktop start",
-    "start:dev:desktop": "lerna run --stream start:dev",
-    "start:dev": "run-p build:watch start:dev:desktop",
+    "start:watch": "lerna run --stream start:watch",
     "test": "lerna run test --concurrency 1 --stream",
     "pack:lin": "lerna run --stream pack:lin",
     "pack:mac": "lerna run --stream pack:mac",
