--- a/packages/server-wallet/package.json
+++ b/packages/server-wallet/package.json
@@ -32,6 +32,8 @@
       },
       "default": "./dist/esm/index.node.js"
     },
+    "./dist/cjs/index.node": "./dist/cjs/index.node.cjs",
+    "./dist/esm/index.node": "./dist/esm/index.node.js",
     "./types": "./types/index.d.ts"
   },
   "imports": {
