better documentation to fix issues when importing the packages

--- a/packages/wallet-protocol-api/package.json
+++ b/packages/wallet-protocol-api/package.json
@@ -32,6 +32,9 @@
       },
       "default": "./dist/esm/index.browser.js"
     },
+    "./dist/cjs/index.node": "./dist/cjs/index.node.cjs",
+    "./dist/esm/index.node": "./dist/esm/index.node.js",
+    "./dist/esm/index.browser": "./dist/esm/index.browser.js",
     "./esm-browser-bundle": "./dist/bundles/esm.min.js",
     "./iife-browser-bundle": "./dist/bundles/iife.js",
     "./umd-browser-bundle": "./dist/bundles/umd.js",
