--- a/packages/wallet-desktop-openapi/src/paths/resources.yaml
+++ b/packages/wallet-desktop-openapi/src/paths/resources.yaml
@@ -95,6 +95,7 @@ components:
       anyOf:
         - $ref: "#/components/schemas/VerifiableCredential"
         - $ref: "#/components/schemas/ObjectResource"
+        - $ref: "#/components/schemas/KeyPair"
         - $ref: "#/components/schemas/Contract"
         - $ref: "#/components/schemas/NonRepudiationProof"
         - $ref: "#/components/schemas/DataExchangeResource"
@@ -192,6 +193,31 @@ components:
         - type
         - resource
 
+    KeyPair:
+      title: JWK pair
+      type: object
+      properties:
+        type:
+          $ref:  "#/components/schemas/ResourceType"
+          example: KeyPair
+          enum:
+            - KeyPair
+        name:
+          type: string
+          example: 'Resource name'
+        identity:
+          $ref: "../schema/identity.yaml#/components/schemas/did"
+        resource:
+          type: object
+          properties:
+            keyPair:
+              $ref: "../schema/jwkPair.yaml#/components/schemas/JwkPair"
+          required:
+            - keyPair
+      required:
+        - type
+        - resource
+
     Contract:
       title: Contract
       type: object
@@ -212,21 +238,7 @@ components:
             dataSharingAgreement:
               $ref: "../schema/dataSharingAgreement.yaml#/components/schemas/DataSharingAgreement"
             keyPair:
-              type: object
-              properties:
-                privateJwk:
-                  type: string
-                  description: |
-                    A stringified JWK with alphabetically sorted claims that represents a private key (complementary to `publicJwk`)
-                  example: '{"alg":"ES256","crv":"P-256","d":"rQp_3eZzvXwt1sK7WWsRhVYipqNGblzYDKKaYirlqs0","kty":"EC","x":"sMGSjfIlRJRseMpx3iHhCx4uh-6N4-AUKX18lmoeSD8","y":"Hu8EcpyH2XrCd-oKqm9keEhnMx2v2QaPs6P4Vs8OkpE"}'
-                publicJwk:
-                  type: string
-                  description: |
-                    A stringified JWK with alphabetically sorted claims that represents the public key (complementary to `privateJwk`). It MUST match either `dataSharingAgreement.dataExchangeAgreement.orig` or `dataSharingAgreement.dataExchangeAgreement.dest`
-                  example: '{"alg":"ES256","crv":"P-256","kty":"EC","x":"sMGSjfIlRJRseMpx3iHhCx4uh-6N4-AUKX18lmoeSD8","y":"Hu8EcpyH2XrCd-oKqm9keEhnMx2v2QaPs6P4Vs8OkpE"}'
-              required:
-                - privateJwk
-                - publicJwk
+              $ref: "../schema/jwkPair.yaml#/components/schemas/JwkPair"
           required:
             - dataSharingAgreement
             - keyPair
@@ -284,6 +296,7 @@ components:
       enum:
         - VerifiableCredential
         - Object
+        - KeyPair
         - Contract
         - DataExchange
         - NonRepudiationProof
