--- a/packages/wallet-protocol-api/package.json
+++ b/packages/wallet-protocol-api/package.json
@@ -5,7 +5,7 @@
   "keywords": [
     "i3-market",
     "wallet",
-    "i3-wallet"
+    "i3M-Wallet"
   ],
   "license": "EUPL-1.2",
   "contributors": [
