--- a/packages/wallet-cloud-vault/package.json
+++ b/packages/wallet-cloud-vault/package.json
@@ -46,21 +46,25 @@
     ".": "./dist/index.js",
     "./openapi.yaml": "./dist/spec/openapi.yaml",
     "./openapi.json": "./dist/spec/openapi.json",
+    "./openapi.dereferenced.json": "./dist/spec/openapi_dereferenced.json",
     "./oas-ts-types": "./types/openapi.d.ts"
   },
   "scripts": {
+    "build": "run-s clean:dist lint openapi tsc",
+    "clean": "run-s clean:dist clean:openapi",
+    "clean:dist": "rimraf dist",
+    "clean:openapi": "rimraf src/spec/openapi.json src/spec/openapi.yaml dist/spec",
+    "predev": "npm run openapi",
+    "dev": "nodemon src/index.ts",
+    "git:add": "git add -A",
+    "lint": "ts-standard --fix",
+    "preopenapi": "npm run clean:openapi",
     "openapi": "run-s openapi:json openapi:types",
     "openapi:json": "ts-node build/createOASJsonBundle.ts",
     "openapi:types": "ts-node build/openApiTypes.ts",
-    "tsc": "tsc -p tsconfig.build.json",
-    "build": "run-s clean openapi tsc",
     "start": "node dist/index.js",
-    "predev": "npm run openapi",
-    "dev:tsc": "concurrently \"npx tsc -p tsconfig.build.json --watch\" \"nodemon -q dist/index.js\"",
-    "dev": "ts-node -P tsconfig.build.json src/index.ts",
-    "clean": "rimraf dist src/spec/openapi.json src/spec/openapi.yaml",
     "test": "mocha -r ts-node/register 'test/**/*.ts'",
-    "git:add": "git add -A",
+    "tsc": "tsc -p tsconfig.build.json",
     "version": "run-s build test git:add",
     "postversion": "git push --follow-tags"
   },
@@ -84,17 +88,20 @@
     ]
   },
   "devDependencies": {
+    "@apidevtools/swagger-parser": "^10.1.0",
     "@dtsgenerator/replace-namespace": "^1.5.4",
     "@types/express": "^4.17.15",
     "@types/js-yaml": "^4.0.5",
+    "@types/lodash": "^4.14.191",
     "@types/mocha": "^10.0.1",
     "@types/morgan": "^1.9.4",
     "@types/node": "^18.11.18",
+    "@types/swagger-ui-express": "^4.1.3",
     "chai": "^4.3.7",
     "chai-http": "^4.3.0",
-    "concurrently": "^7.6.0",
     "dtsgenerator": "^3.16.2",
     "js-yaml": "^4.1.0",
+    "lodash": "^4.17.21",
     "nodemon": "^2.0.20",
     "npm-run-all": "^4.1.5",
     "openapi-types": "^12.1.0",
@@ -110,6 +117,7 @@
     "express-openapi-validator": "^5.0.1",
     "morgan": "^1.10.0",
     "passport": "^0.6.0",
-    "pg": "^8.8.0"
+    "pg": "^8.8.0",
+    "swagger-ui-express": "^4.6.0"
   }
 }
