--- a/packages/wallet-cloud-vault/package.json
+++ b/packages/wallet-cloud-vault/package.json
@@ -64,6 +64,7 @@
     "openapi:types": "ts-node build/openApiTypes.ts",
     "start": "node dist/index.js",
     "test": "mocha -r ts-node/register 'test/**/*.ts'",
+    "mocha-ts": "mocha -r ts-node/register -- ",
     "tsc": "tsc -p tsconfig.build.json",
     "version": "run-s build test git:add",
     "postversion": "git push --follow-tags"
@@ -102,6 +103,7 @@
     "dtsgenerator": "^3.16.2",
     "js-yaml": "^4.1.0",
     "lodash": "^4.17.21",
+    "mocha": "^10.2.0",
     "nodemon": "^2.0.20",
     "npm-run-all": "^4.1.5",
     "openapi-types": "^12.1.0",
