--- a/packages/wallet-cloud-vault/package.json
+++ b/packages/wallet-cloud-vault/package.json
@@ -91,6 +91,7 @@
   "devDependencies": {
     "@apidevtools/swagger-parser": "^10.1.0",
     "@dtsgenerator/replace-namespace": "^1.5.4",
+    "@types/eventsource": "^1.1.10",
     "@types/express": "^4.17.15",
     "@types/js-yaml": "^4.0.5",
     "@types/lodash": "^4.14.191",
@@ -101,10 +102,13 @@
     "chai": "^4.3.7",
     "chai-http": "^4.3.0",
     "dtsgenerator": "^3.16.2",
+    "eventsource": "^2.0.2",
+    "i": "^0.3.7",
     "js-yaml": "^4.1.0",
     "lodash": "^4.17.21",
     "mocha": "^10.2.0",
     "nodemon": "^2.0.20",
+    "npm": "^9.3.1",
     "npm-run-all": "^4.1.5",
     "openapi-types": "^12.1.0",
     "rimraf": "^4.1.0",
