--- a/packages/wallet-cloud-vault/package.json
+++ b/packages/wallet-cloud-vault/package.json
@@ -98,6 +98,7 @@
     "@types/mocha": "^10.0.1",
     "@types/morgan": "^1.9.4",
     "@types/node": "^18.11.18",
+    "@types/pg": "^8.6.6",
     "@types/swagger-ui-express": "^4.1.3",
     "chai": "^4.3.7",
     "chai-http": "^4.3.0",
