--- a/packages/wallet-cloud-vault/tsconfig.build.json
+++ b/packages/wallet-cloud-vault/tsconfig.build.json
@@ -1,4 +1,4 @@
 {
   "extends": "./tsconfig",
-  "exclude": ["build/**/*.ts", "test/**/*"]
+  "exclude": ["build/**/*.ts", "test/**/*", "test-fixtures/**/*"]
 }
