--- a/packages/wallet-cloud-vault/package.json
+++ b/packages/wallet-cloud-vault/package.json
@@ -94,10 +94,13 @@
     "@types/eventsource": "^1.1.10",
     "@types/express": "^4.17.15",
     "@types/js-yaml": "^4.0.5",
+    "@types/jsonwebtoken": "^9.0.1",
     "@types/lodash": "^4.14.191",
     "@types/mocha": "^10.0.1",
     "@types/morgan": "^1.9.4",
     "@types/node": "^18.11.18",
+    "@types/passport": "^1.0.11",
+    "@types/passport-jwt": "^3.0.8",
     "@types/pg": "^8.6.6",
     "@types/swagger-ui-express": "^4.1.3",
     "chai": "^4.3.7",
@@ -122,9 +125,12 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-openapi-validator": "^5.0.1",
+    "jsonwebtoken": "^9.0.0",
     "morgan": "^1.10.0",
     "passport": "^0.6.0",
+    "passport-jwt": "^4.0.1",
     "pg": "^8.8.0",
+    "scrypt-mcf": "^1.0.0",
     "swagger-ui-express": "^4.6.0"
   }
 }
