--- a/packages/wallet-cloud-vault/src/spec-src/schema/jwk.yaml
+++ b/packages/wallet-cloud-vault/src/spec-src/schema/jwk.yaml
@@ -64,12 +64,12 @@ components:
           type: string
           pattern: ^[A-Za-z0-9_-]+$
           description: |
-            The "x" coordinate for the elliptic curve point. It is represented as the base64url encoding of the coordinate's big endian representation. 
+            The "x" coordinate for the elliptic curve point. It is represented as the base64url encoding of the big endian representation of the coordinate. 
           example: 2Rwrw2sbff-EnjbRi5sSJ09FRKhBPO7SsCxRwfBCpx4
         
         y:
           type: string
           pattern: ^[A-Za-z0-9_-]+$
           description: |
-            The "y" coordinate for the elliptic curve point. It is represented as the base64url encoding of the coordinate's big endian representation.
+            The "y" coordinate for the elliptic curve point. It is represented as the base64url encoding of the big endian representation of the coordinate
           example: r-qUFiNmBZqr00pTyUZPPLsBsmEW8pH7_vtBVOPVsi0
