check db connection from the server

--- a/packages/wallet-desktop-openapi/src/schema/dataSharingAgreement.yaml
+++ b/packages/wallet-desktop-openapi/src/schema/dataSharingAgreement.yaml
@@ -233,7 +233,7 @@ components:
                 repeat:
                   type: string
                 hasSubscriptionPrice:
-                  type: integer
+                  type: number
             hasFreePrice:
               type: object
               properties:
