--- a/packages/cloud-vault-client/package.json
+++ b/packages/cloud-vault-client/package.json
@@ -121,6 +121,7 @@
   },
   "devDependencies": {
     "@i3m/cloud-vault-server": "^2.5.6",
+    "@i3m/non-repudiation-library": "^2.5.7",
     "@rollup/plugin-commonjs": "^23.0.2",
     "@rollup/plugin-inject": "^5.0.3",
     "@rollup/plugin-json": "^5.0.1",
@@ -144,7 +145,7 @@
     "rimraf": "^3.0.2",
     "rollup": "^2.79.1",
     "rollup-plugin-terser": "^7.0.2",
-    "ts-standard": "^11.0.0",
+    "ts-standard": "^12.0.2",
     "tslib": "^2.3.1",
     "typedoc": "^0.23.0",
     "typedoc-plugin-markdown": "^3.11.0",
