--- a/packages/cloud-vault-server/src/spec-src/schema/vault.yaml
+++ b/packages/cloud-vault-server/src/spec-src/schema/vault.yaml
@@ -65,13 +65,13 @@ components:
       description: |
         EncryptedStorage is the JSON obejct representing the storage of registered users in the cloud vault
       required:
-        - jwe
+        - ciphertext
       properties:
-        jwe:
+        ciphertext:
           type: string
-          pattern: '^[a-zA-Z0-9_-]+(\.[a-zA-Z0-9_-]*){4}$'
+          pattern: '^[a-zA-Z0-9_-]+$'
           description: |
-            A JWE containing the encrypted storage
+            The encrypted storage in base64url encoding
         timestamp:
           type: number
           description: A timestamp expressed in milliseconds elapsed since the epoch. The timestamp refers to the exact time the latest storage was registered in the cloud vault.
