storage limit can no easily set in binary bytes

--- a/packages/cloud-vault-server/src/spec-src/schema/well-known-cvs-configuration.yaml
+++ b/packages/cloud-vault-server/src/spec-src/schema/well-known-cvs-configuration.yaml
@@ -72,6 +72,7 @@ components:
       required:
         - id
         - version
+        - vault_size
         - vault_endpoint
         - events_endpoint
         - timestamp_endpoint
@@ -87,6 +88,9 @@ components:
           type: string
           description: the version of the API this configuration applies to
           example: API_VERSION
+        vault_size:
+          type: integer
+          description: the upper limit for the length in bytes of the vault storage
         vault_endpoint:
           type: string
           description: the vault endpoint where to GET, POST or DELETE the storage
