--- a/packages/wallet-desktop/package.json
+++ b/packages/wallet-desktop/package.json
@@ -98,6 +98,7 @@
     "lodash": "^4.17.21",
     "module-alias": "^2.2.2",
     "morgan": "^1.10.0",
+    "object-sha": "^2.0.7",
     "pbkdf2-hmac": "^1.0.4",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
@@ -106,6 +107,7 @@
     "react-transition-group": "^4.4.2",
     "rimraf": "^3.0.2",
     "rxjs": "^6.6.6",
+    "scrypt-pbkdf": "^1.0.10",
     "swagger-ui-express": "^4.1.6",
     "uuid": "^8.3.2",
     "winston": "^3.3.3"
