Using last electron version and key generation fixes

--- a/packages/wallet-desktop/package.json
+++ b/packages/wallet-desktop/package.json
@@ -17,7 +17,7 @@
     "pack:mac": "npm run clean:rel && electron-builder --mac -p never",
     "pack:win": "npm run clean:rel && electron-builder --win --x64 --arm64 --ia32 -p never",
     "lint": "eslint -c .eslintrc --ext .ts ./src",
-    "start": "electron .",
+    "start": "electron  --js-flags=\"--max_old_space_size=8192\" .",
     "test": "echo \"Warning: You must specify tests for this package\"",
     "preversion": "npm run build"
   },
@@ -65,7 +65,7 @@
     "cli-truncate": "^3.1.0",
     "concurrently": "^6.0.2",
     "dotenv": "^8.2.0",
-    "electron": "^12.0.15",
+    "electron": "^23.0.0",
     "electron-builder": "^22.11.7",
     "fs-extra": "^9.1.0",
     "nodemon": "^2.0.7",
@@ -83,6 +83,7 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@i3m/base-wallet": "^2.5.7",
     "@i3m/bok-wallet": "^2.5.7",
+    "@i3m/cloud-vault-client": "^2.5.7",
     "@i3m/sw-wallet": "^2.5.7",
     "@i3m/wallet-desktop-openapi": "^2.5.7",
     "@i3m/wallet-protocol": "^2.5.7",
