--- a/packages/wallet-desktop/package.json
+++ b/packages/wallet-desktop/package.json
@@ -105,6 +105,7 @@
     "react-dom": "^17.0.1",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
+    "react-spinners": "^0.13.8",
     "react-transition-group": "^4.4.2",
     "rimraf": "^3.0.2",
     "rxjs": "^6.6.6",
