token expiration can now be set as an environment variable

--- a/packages/cloud-vault-server/.env.template
+++ b/packages/cloud-vault-server/.env.template
@@ -30,3 +30,5 @@ DB_STORAGE_LIMIT=5242880
 JWT_SECRET=
 # The MAC algorithm to use. Either HS256, HS384 or HS512 (default)
 JWT_ALG=HS512
+# How long the token is valid in seconds. Defaults to 91 days (3 months)
+JWT_EXPIRES_IN=7862400
