--- a/packages/wallet-desktop/package.json
+++ b/packages/wallet-desktop/package.json
@@ -88,6 +88,7 @@
     "@i3m/wallet-desktop-openapi": "^2.5.7",
     "@i3m/wallet-protocol": "^2.5.7",
     "@i3m/wallet-protocol-utils": "^2.5.7",
+    "bootstrap": "^5.2.3",
     "cors": "^2.8.5",
     "electron-connect": "^0.6.3",
     "electron-store": "^7.0.3",
@@ -102,6 +103,7 @@
     "object-sha": "^2.0.7",
     "pbkdf2-hmac": "^1.0.4",
     "react": "^17.0.1",
+    "react-bootstrap": "^2.7.2",
     "react-dom": "^17.0.1",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
