--- a/packages/wallet-desktop/package.json
+++ b/packages/wallet-desktop/package.json
@@ -44,6 +44,7 @@
     "@rollup/plugin-node-resolve": "^11.2.0",
     "@rollup/plugin-replace": "^2.4.1",
     "@rollup/plugin-typescript": "^8.2.0",
+    "@types/argparse": "^2.0.10",
     "@types/concurrently": "^6.0.0",
     "@types/cors": "^2.8.10",
     "@types/express": "^4.17.11",
@@ -88,6 +89,7 @@
     "@i3m/wallet-desktop-openapi": "^2.5.7",
     "@i3m/wallet-protocol": "^2.5.7",
     "@i3m/wallet-protocol-utils": "^2.5.7",
+    "argparse": "^2.0.1",
     "bootstrap": "^5.2.3",
     "cors": "^2.8.5",
     "electron-connect": "^0.6.3",
