--- a/packages/cloud-vault-server/.env.template
+++ b/packages/cloud-vault-server/.env.template
@@ -2,12 +2,16 @@
 NODE_ENV=production
 
 # Server ID. It is a unique identifier for this server. THIS IS MANDATORY and changes the way users' auth and encryption keys are derived. Therefore CHANGING IT IS A BREAKING CHANGE that would require major version update.
+# You cam easily generate a new unique one with uuidgen
 SERVER_ID=
 
 # Server address and port.
-# These are all optional. SERVER_ADDRESS defaults to ::, and SERVER_PORT to 3000, which are safe values when run in a container
-SERVER_ADDRESS=::
-SERVER_PORT=3000
+# These are all optional. SERVER_ADDRESS defaults to the HOSTNAME variable, and SERVER_PORT to 3000, which are safe values when run in a container
+#SERVER_ADDRESS=localhost
+#SERVER_PORT=3000
+
+# Server public URL. Since this is likely operating behind a reverse proxy, the public URI may introduce new prefixes. It is also necessary to know the exact paths for OIDC redirect-uris and any well-known configuration.
+#SERVER_PLUBIC_URL=https://mybackplane.com/cvs
 
 # CORS.
 # If not set defaults to *
@@ -32,3 +36,19 @@ JWT_SECRET=
 JWT_ALG=HS512
 # How long the token is valid in seconds. Defaults to 91 days (3 months)
 JWT_EXPIRES_IN=7862400
+
+# The configuration for the OIDC. Rquired fields can be get from the response of POSTing to [https://identity1.i3-market.eu/release2/oidc/reg](https://identity1.i3-market.eu/release2/oidc/reg). The POST MUST use the token as an authorization bearer token, and the contents can be, e.g.:
+# ```json
+# {
+#    "application_type": "web",
+#    "redirect_uris": [<SERVER_PUBLIC_URL>/oidc/cb"],
+#    "client_name": "CVS <SERVER_ID>",
+#    "grant_types": [ "authorization_code" ],
+#    "response_types": [ "code" ],
+#    "token_endpoint_auth_method": "client_secret_jwt",
+#    "id_token_signed_response_alg": "EdDSA"
+# }
+# ```
+OIDC_CLIENT_ID=
+OIDC_CLIENT_SECRET=
+OIDC_PROVIDER_URI=
