--- a/packages/cloud-vault-client/package.json
+++ b/packages/cloud-vault-client/package.json
@@ -126,6 +126,7 @@
     "@types/chai": "^4.2.22",
     "@types/eventsource": "^1.1.11",
     "@types/mocha": "^10.0.0",
+    "@types/prompt-sync": "^4.2.0",
     "c8": "^7.12.0",
     "chai": "^4.3.3",
     "dotenv": "^16.0.3",
@@ -135,6 +136,7 @@
     "minimatch": "^5.0.1",
     "mocha": "^10.0.0",
     "pirates": "^4.0.1",
+    "prompt-sync": "^4.2.0",
     "puppeteer": "^19.1.2",
     "rimraf": "^3.0.2",
     "rollup": "^2.79.1",
