--- a/packages/cloud-vault-server/package.json
+++ b/packages/cloud-vault-server/package.json
@@ -32,6 +32,7 @@
     "node": ">=16.x"
   },
   "main": "dist/index.js",
+  "type": "module",
   "types": "./types/index.d.ts",
   "bin": {
     "cvs": "./dist/index.js"
@@ -45,9 +46,8 @@
   },
   "exports": {
     ".": "./dist/index.js",
-    "./openapi.yaml": "./dist/spec/openapi.yaml",
-    "./openapi.json": "./dist/spec/openapi.json",
-    "./openapi.dereferenced.json": "./dist/spec/openapi_dereferenced.json",
+    "./openapi.yaml": "./dist/spec/cvs.yaml",
+    "./openapi.json": "./dist/spec/cvs.json",
     "./oas-ts-types": "./types/openapi.d.ts"
   },
   "scripts": {
@@ -126,6 +126,7 @@
     "express-openapi-validator": "^5.0.1",
     "jsonwebtoken": "^9.0.0",
     "morgan": "^1.10.0",
+    "openid-client": "^5.4.0",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
     "pg": "^8.8.0",
