support for node16 and nodenext module resolution

--- a/package.json
+++ b/package.json
@@ -89,18 +89,18 @@
     "build": "run-s lint:src build:js lint:test docs",
     "build:js": "rollup -c build/rollup.config.js",
     "clean": "rimraf .mocha-ts coverage dist types docs",
-    "coverage": "c8 --clean --check-coverage --exclude '{src/ts/**/*.spec.ts,test,test-vectors,build}' --exclude-after-remap --reporter=text --reporter=lcov node ./build/bin/mocha-ts.cjs --commonjs ",
+    "coverage": "c8 --clean --check-coverage --exclude \"{src/ts/**/*.spec.ts,test,test-vectors,build}\" --exclude-after-remap --reporter=text --reporter=lcov node ./build/bin/mocha-ts.cjs --commonjs ",
     "docs": "node build/build.docs.cjs",
     "git:add": "git add -A",
     "lint": "ts-standard --fix",
-    "lint:src": "ts-standard --fix 'src/**/!(*.spec).ts'",
-    "lint:test": "ts-standard --fix '{test/**/*.ts,src/**/*.spec.ts}'",
+    "lint:src": "ts-standard --fix \"src/**/!(*.spec).ts\"",
+    "lint:test": "ts-standard --fix \"{test/**/*.ts,src/**/*.spec.ts}\"",
     "mocha-ts": "node --experimental-modules --experimental-json-modules --es-module-specifier-resolution=node ./build/bin/mocha-ts.cjs ",
     "mocha-ts:cjs": "node ./build/bin/mocha-ts.cjs --commonjs ",
     "mocha-ts:watch": "npm run mocha-ts:cjs -- --watch ",
     "mocha-ts:browser": "node build/testing/browser/index.cjs ",
     "mocha-ts:browser-headless": "node build/testing/browser/index.cjs headless ",
-    "preversion": "run-s lint:src build:js lint:test",
+    "preversion": "run-s clean lint:src build:js lint:test",
     "version": "run-s docs git:add",
     "postversion": "git push --follow-tags",
     "test": "run-s test:node test:browser-headless",
@@ -160,23 +160,23 @@
     "rollup": "^3.20.2",
     "ts-standard": "^12.0.2",
     "tslib": "^2.3.1",
-    "typedoc": "^0.23.0",
-    "typedoc-plugin-markdown": "^3.11.0",
+    "typedoc": "~0.23.0",
+    "typedoc-plugin-markdown": "~3.14.0",
     "typescript": "^5.0.3",
     "uuid": "^9.0.0"
   },
   "dependencies": {
     "@apidevtools/openapi-schemas": "^2.1.0",
-    "@juanelas/base64": "^1.0.4",
+    "@juanelas/base64": "^1.1.0",
     "ajv": "^8.11.0",
     "ajv-draft-04": "^1.0.0",
     "ajv-formats": "^2.1.1",
-    "bigint-conversion": "^2.2.1",
-    "bigint-crypto-utils": "^3.0.21",
+    "bigint-conversion": "^2.4.0",
+    "bigint-crypto-utils": "^3.2.1",
     "elliptic": "^6.5.4",
     "ethers": "^5.5.2",
     "jose": "^4.3.7",
     "lodash": "^4.17.21",
-    "object-sha": "^2.0.6"
+    "object-sha": "^2.1.0"
   }
 }
