--- a/packages/cloud-vault-server/.env.template
+++ b/packages/cloud-vault-server/.env.template
@@ -11,7 +11,7 @@ SERVER_ID=
 #SERVER_PORT=3000
 
 # Server public URL. Since this is likely operating behind a reverse proxy, the public URI may introduce new prefixes. It is also necessary to know the exact paths for OIDC redirect-uris and any well-known configuration.
-#SERVER_PLUBIC_URL=https://mybackplane.com/cvs
+#SERVER_PUBLIC_URL=https://mybackplane.com/cvs
 
 # CORS.
 # If not set defaults to *
@@ -52,3 +52,5 @@ JWT_EXPIRES_IN=7862400
 OIDC_CLIENT_ID=
 OIDC_CLIENT_SECRET=
 OIDC_PROVIDER_URI=
+# A comma-separated list of acepted/trusted VC issuers
+OIDC_CREDENTIAL_ISSUER=did:ethr:i3m:0xda4481982a024b5ae7e57756ad649d79ddcafb09
