--- a/packages/cloud-vault-server/package.json
+++ b/packages/cloud-vault-server/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@i3m/cloud-vault-server",
   "version": "2.5.7",
+  "private": "true",
   "description": "A secure encrypted backup on the cloud for the i3-MARKET wallet",
   "keywords": [
     "vault",
@@ -32,7 +33,6 @@
     "node": ">=16.x"
   },
   "main": "dist/index.js",
-  "type": "module",
   "types": "./types/index.d.ts",
   "bin": {
     "cvs": "./dist/index.js"
@@ -92,8 +92,10 @@
   "devDependencies": {
     "@apidevtools/swagger-parser": "^10.1.0",
     "@dtsgenerator/replace-namespace": "^1.5.4",
+    "@types/cookie-parser": "^1.4.3",
     "@types/eventsource": "^1.1.10",
     "@types/express": "^4.17.15",
+    "@types/express-session": "^1.17.7",
     "@types/js-yaml": "^4.0.5",
     "@types/jsonwebtoken": "^9.0.1",
     "@types/lodash": "^4.14.191",
@@ -120,10 +122,12 @@
     "typescript": "^4.9.4"
   },
   "dependencies": {
-    "@i3m/non-repudiation-library": "^2.5.6",
+    "@i3m/non-repudiation-library": "^2.6.0",
+    "cookie-parser": "^1.4.6",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-openapi-validator": "^5.0.1",
+    "express-session": "^1.17.3",
     "jsonwebtoken": "^9.0.0",
     "morgan": "^1.10.0",
     "openid-client": "^5.4.0",
