support for new cvs

--- a/packages/cloud-vault-server/.env.template
+++ b/packages/cloud-vault-server/.env.template
@@ -6,9 +6,9 @@ NODE_ENV=production
 SERVER_ID=
 
 # Server address and port.
-# These are all optional. SERVER_ADDRESS defaults to the HOSTNAME variable, and SERVER_PORT to 3000, which are safe values when run in a container
-#SERVER_ADDRESS=localhost
-#SERVER_PORT=3000
+# These are all optional. SERVER_ADDRESS defaults to the IPv6 localhost at ::1, and SERVER_PORT to 3000, which are safe values when run in a container
+# SERVER_ADDRESS=cvs
+# SERVER_PORT=23000
 
 # Server public URL. Since this is likely operating behind a reverse proxy, the public URI may introduce new prefixes. It is also necessary to know the exact paths for OIDC redirect-uris and any well-known configuration.
 #SERVER_PUBLIC_URL=https://mybackplane.com/cvs
